Added normalize css file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Landing Page</title>
 
     <link rel="stylesheet" href="styles/styles.css">
-	<link rel="" href="">
+	<link rel="stylesheet" href="styles/normalize-fwd.css">
 
 	<script src="" defer></script>
 
