--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <header class="site-header">
 
-            <a href="index.html" class="site-name"><img src="Logo/logo2.png" alt="logo">
+            <a href="index.html" class="site-name"><img src="Logo/logo.webp" alt="logo">
             </a>
             
             <nav class="site-navigation" id="site-navigation">
